<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/primary"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etCorreuElectronicDades"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:selectAllOnFocus="true"
        android:hint="@string/str_correo_electronico"
        android:singleLine="true"
        android:elevation="2dp"
        android:background="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etNomDades"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:selectAllOnFocus="true"
        android:hint="@string/str_nombre"
        android:singleLine="true"
        android:elevation="2dp"
        android:background="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:selectAllOnFocus="true"
        android:hint="@string/str_apellidos"
        android:singleLine="true"
        android:elevation="2dp"
        android:background="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etNick"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:selectAllOnFocus="true"
        android:hint="@string/str_nick"
        android:singleLine="true"
        android:elevation="2dp"
        android:background="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etContrasenyaDades"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:selectAllOnFocus="true"
        android:hint="@string/str_contraseña"
        android:singleLine="true"
        android:inputType="textPassword"
        android:elevation="2dp"
        android:background="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etConfirmaContrasenya"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:selectAllOnFocus="true"
        android:hint="@string/str_confirmar_contraseña"
        android:singleLine="true"
        android:inputType="textPassword"
        android:elevation="2dp"
        android:background="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bEnviarDades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:visibility="invisible"
        android:background="@color/green"
        android:textColor="@color/white"
        android:text="@string/str_registrarse"
        android:elevation="6dp" />

</LinearLayout>