<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/primary"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewPetit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:src="@drawable/logo"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingTop="13dp"
            android:layout_marginLeft="40dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/str_no_cuenta"/>

        <Button
            android:id="@+id/bRegistre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:text="@string/str_registrarse"
            android:background="@android:color/transparent"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/etNom"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:selectAllOnFocus="true"
        android:hint="@string/str_nombre_usuario"
        android:singleLine="true"
        android:elevation="2dp"
        android:background="@color/white"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/etContrasenya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/str_contraseña"
        android:inputType="textPassword"
        android:background="@color/white"
        android:textSize="15sp"
        android:singleLine="true"
        android:elevation="2dp"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/bAcces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        android:text="@string/str_entrar"
        android:elevation="6dp" />

</LinearLayout>